Fixed: wrong background color for ``

--- a/themes/cecton/src/css/main.css
+++ b/themes/cecton/src/css/main.css
@@ -200,7 +200,7 @@ section.main a:hover {
 }
 
 p code {
-	background-color: #eee;
+	background-color: #111;
 	padding: 0 0.2em;
 }
 
